templates/template/Genocs.Template-kubernetes-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicetemplate
  labels:
    app: servicetemplate-worker
spec:
  selector:
    matchLabels:
      app: servicetemplate-worker
  replicas: 1
  template:
    metadata:
      labels:
        app: servicetemplate-worker
    spec:
      containers:
        - name: servicetemplate-worker
          image: genocsacr.azurecr.io/servicetemplate-worker:latest
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 250m
              memory: 1024Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: servicetemplate
spec:
  # type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: servicetemplate-worker
